# ssvm-nodejs-compress-service

./: .gitignore  Cargo.toml  README.md  up.sh
.github/workflows/: docker.yml
docker/: Dockerfile  Dockerfile.debug_base
node/: app.js  test.js
src/: lib-lzma_rs-lzma-throw.rs  lib-lzma_rs-lzma.rs  lib-lzma_rs-lzma2.rs  lib-test.rs  lib-xz2.rs
